@startuml diagrama

class Personaje

class Jugador{
    + vida
}
class Proyectil
class Colision
class Juego
class Musica

Juego "1" *-- "2" Jugador
Jugador --|> Personaje
Personaje "1" *-- "1" Colision
Personaje "1" *-- "4" Movimiento
Personaje "1" o-- "*" Proyectil
Proyectil "1" *-- "4" Movimiento
Juego *-- Musica

@enduml